# test

./: .gitignore  README.md  index.html  site.hs  test.cabal  unterricht.html
docs/: index.html
docs/assets/css/: default.css
docs/kontakt/: index.html
docs/unterricht/: index.html
docs/unterricht/Kryptowährungen/: index.html  slides.html
docs/unterricht/Slides/: index.html
docs/unterricht/programmieren/: index.html
docs/unterricht/programmieren/1-installation/: index.html  slides.html
docs/unterricht/programmieren/2-modul/: index.html  slides.html
kontakt/: index.md
templates/: default.html  revealjs.html  unterricht-liste.html  unterricht.html
unterricht/Kryptowährungen/: index.md
unterricht/Kryptowährungen/references/: references.bib
unterricht/programmieren/: index.md
unterricht/programmieren/1-installation/: index.md  slides.md
unterricht/programmieren/2-modul/: index.md  slides.md
