name:               test
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.14.*
                  , filepath == 1.4.2.1
                  , directory == 1.3.6.2
                  , process == 1.6.13.2
                  , text == 1.2.4.1
                  , pandoc == 2.11.4
  ghc-options:      -threaded
  default-language: Haskell2010
